Add responsive list entity

--- a/app/css/global-layout.html
+++ b/app/css/global-layout.html
@@ -16,6 +16,10 @@
                 @apply --layout-center-justified;
             }
 
+            .flex-wrap {
+                @apply --layout-wrap;
+            }
+
             .flex-vertical-center { @apply --layout-center; }
 
             .flex-vertical-end { @apply --layout-end; }
