--- a/app/css/global-styles.html
+++ b/app/css/global-styles.html
@@ -95,7 +95,8 @@
             }
 
             paper-card#design {
-                min-width: 300px;
+                /* TODO refactor*/
+                width: 99%;
                 min-height: 160px;
                 margin-bottom: 6px;
             }
@@ -111,7 +112,7 @@
             }
 
             paper-card#design div.card-content {
-                min-width: 250px;
+
             }
 
             paper-card#design div.card-content {
