Fix enable enable audio timeslot

--- a/app/css/global-styles.html
+++ b/app/css/global-styles.html
@@ -84,6 +84,11 @@
                 box-shadow: 0 3px 8px rgba(0,0,0,.23), 0 3px 8px rgba(0,0,0,.16);
             }
 
+            paper-card #contentRightSection {
+                background-position-y: center;
+                background-position-x: center;
+            }
+
             paper-icon-button.circle-small {
                 background-color: var(--accent-color);
                 color: var(--title-color);
