--- a/app/module/timeslot/element/timeslot/timeslot.html
+++ b/app/module/timeslot/element/timeslot/timeslot.html
@@ -129,6 +129,7 @@
                     <div class="dataWrapper">
                         <div class="nameTimeslot">{{timeslot.name}}</div>
                         <div id="status">{{status}}</div>
+                        <div  class="flex flex-horizontal-end">{{timeslot.virtualMonitorReference.name}}</div>
                         <div class="flex flex-horizontal-end">{{currentTime}} / {{timeslot.duration}} sec</div>
                     </div>
                 </div>
