Fix timeline flow

--- a/app/css/global-styles.html
+++ b/app/css/global-styles.html
@@ -28,6 +28,10 @@
                 --playlist-pause   : #FAD646;
                 --playlist-idle   : #F00755;
 
+                --timeline-running : #39A33D;
+                --timeline-pause   : #FAD646;
+                --timeline-idle   : #F00755;
+
                 --title-color: #FFFFFF;
 
                 --drawer-menu-color:           #ffffff;
