Fix media device

--- a/app/module/media-device/index.html
+++ b/app/module/media-device/index.html
@@ -19,7 +19,7 @@
         </style>
         <iron-pages id="ironPages" selected="{{selected}}">
             <div id="list">
-                <media-device-view-list selected="{{viewSelected}}" resource-selected="{{mediaDevice}}">
+                <media-device-view-list selected="{{selected}}" resource-selected="{{mediaDevice}}">
                     <div slot="header" class="flex flex-horizontal flex-center flex-horizontal-space-between header">
                         <div>Lista device</div>
                         <paper-icon-button class="circle" on-tap="displayAddView" icon="app:create" title="Inserisci un device"></paper-icon-button>
