--- a/app/module/media-device/element/media-device/media-device.html
+++ b/app/module/media-device/element/media-device/media-device.html
@@ -9,6 +9,7 @@
 <link rel="import" href="../../../../css/global-layout.html">
 <link rel="import" href="../../../../css/global-styles.html">
 <link rel="import" href="../../../../element/iconset/iconset.html">
+<link rel="import" href="../../../../element/storage/storage-adapter-behaviour.html">
 
 <dom-module id="media-device-wc">
     <template>
@@ -74,17 +75,19 @@
         </style>
         <paper-card id="design">
             <div class="card-content flex flex-horizontal">
-                <div class="data flex-basis-85 flex flex-vertical">
+                <div class="data flex-1 flex flex-vertical">
                     <div class="dataWrapper">
                         <div>{{mediaDevice.name}}</div>
+                        <div>{{mediaDevice.type}}</div>
+                        <div>{{mediaDevice.deviceName}}</div>
                     </div>
                 </div>
-                <div class="flags flex-basis-15">
+                <div class="flags">
                     <paper-menu-button ignore-select disabled="{{hideCrud}}">
                         <paper-icon-button icon="app:more" slot="dropdown-trigger" alt="multi menu"></paper-icon-button>
                         <paper-listbox slot="dropdown-content" multi>
-                            <!--   <paper-item on-click="_update">Modifica</paper-item> -->
-                            <paper-item  on-click="_remove">Elimina</paper-item>
+                            <paper-item on-tap="_update">Modifica</paper-item>
+                            <paper-item  on-tap="_remove">Elimina</paper-item>
                         </paper-listbox>
                     </paper-menu-button>
                 </div>
@@ -95,7 +98,7 @@
     </template>
 
     <script>
-        class ElementMediaDevice extends Polymer.Element {
+        class ElementMediaDevice extends StorageAdapterBehaviour {
 
             static get is() {
                 return 'media-device-wc';
@@ -108,19 +111,43 @@
                         type: Object,
                         notify:true
                     },
+
+                    storageName: {
+                        value: MediaDeviceConfig.NAME_SERVICE
+                    },
                 };
             }
 
             ready() {
                 super.ready();
+                this.addStorageListener(dsign.storage.Storage.STORAGE_POST_UPDATE, this._updateFromStorage.bind(this))
             }
 
+            /**
+             * @param evt
+             * @private
+             */
+            _updateFromStorage(evt) {
+                if (evt.data.id === this.mediaDevice.id) {
+                    this.mediaDevice = {};
+                    this.mediaDevice = evt.data;
+                }
+            }
+
+            /**
+             * @param evt
+             * @private
+             */
             _remove(evt) {
-                this.dispatchEvent(new CustomEvent('wrap-remove', {detail: this.mediaDevice}));
+                this.dispatchEvent(new CustomEvent('remove', {detail: this.mediaDevice}));
             }
 
+            /**
+             * @param evt
+             * @private
+             */
             _update(evt) {
-                this.dispatchEvent(new CustomEvent('wrap-update', {detail: this.mediaDevice}));
+                this.dispatchEvent(new CustomEvent('update-view', {detail: this.mediaDevice}));
             }
         }
 
